--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -11,6 +11,7 @@ html {
 a {
     display: inline-block;
     text-decoration: none;
+    color: #fff;
 }
 
 ul,
@@ -18,4 +19,17 @@ li {
     margin: 0;
     padding: 0;
     list-style: none;
+}
+
+.container {
+    max-width: 1170px;
+    padding: 0 15px;
+    margin: 0 auto;
+} 
+
+body {
+    font-size: 16px;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    color: #fff;
 }
