--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,3 +1,109 @@
 @import 'vars';
 @import 'global';
 @import 'fonts';
+
+// start header
+
+.header__top {
+    background-color: $gray;
+}
+
+.header__top-inner {
+    display: flex;
+    justify-content: space-between;
+    height: 100px;
+    text-align: center;
+    align-items: center;
+}
+
+.header__top-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    a {
+        font-family: 'Quicksand', sans-serif;
+        font-weight: 700;
+        font-size: 30px;
+        color: #000;
+        span {
+            color: $blue;
+        }
+    }
+}
+
+.header__top-sell {
+    background-color: $blue;
+    padding: 12px 18px;
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 36px;
+    font-size: 14px;
+    margin-left: auto;
+    margin-right: 50px;
+}
+
+.header__top-btn {
+    background-color: $blue;
+    padding: 12px 18px;
+    border-radius: 36px;
+    font-size: 14px;
+}
+
+.header__menu-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+}
+
+.menu__list {
+    display: flex;
+    justify-content: space-between;
+    li + li {
+        margin-left: 34px;
+    }
+    a {
+        color: #333;
+        display: inline-block;
+        font-size: 15px;
+        font-family: 'Quicksand', sans-serif;
+        font-weight: 700;
+    }
+}
+
+.menu-search {
+    max-width: 360px;
+    position: relative;
+    input {
+        display: block;
+        width: 100%;
+        height: 45px;
+        border: none;
+        border: 1px solid #d9dfe5;
+        padding-right: 100px;
+        padding-left: 25px;
+        border-radius: 45px;
+        font-size: 15px;
+        &::placeholder {
+            color: #898f96;
+        }
+    }
+    button {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 70px;
+        height: 45px;
+        background-color: $blue;
+        border: none;
+        cursor: pointer;
+        border-radius: 45px;
+        &::before{
+            content: '\f002';
+            font-family: 'icomoon';
+            font-size: 15px;
+            color: #fff;
+        }
+    }
+}
+
+// end header 
