--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -66,12 +66,13 @@
         display: inline-block;
         font-size: 15px;
         font-family: 'Quicksand', sans-serif;
-        font-weight: 700;
+        font-weight: 500;
+        text-transform: uppercase;
     }
 }
 
 .menu-search {
-    max-width: 360px;
+    min-width: 360px;
     position: relative;
     input {
         display: block;
@@ -107,3 +108,114 @@
 }
 
 // end header 
+
+// star search
+
+.search {
+    background-color: $bg;
+    min-height: 727px;
+}
+
+.search__content {
+    text-align: center;
+}
+
+.search__content-title {
+    padding-top: 185px;
+    font-size: 60px;
+    line-height: 70px;
+    margin-bottom: 2px;
+    span {
+        font-weight: 700;
+    }
+}
+
+.search__content-text {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 72px;
+    margin-bottom: 42px;
+}
+
+.search__content-btn {
+    a {
+        padding: 21px 32px;
+        background-color: $bg;
+        border: 1px solid #fff;
+        border-radius: 55px;
+        & + a {
+            margin-left: 30px;
+        }
+        transition: all .5s;
+        &:hover {
+            background-color: #fff;
+            color: $blue;
+            border: 1px solid $bg;
+        }
+    }
+}
+
+.bgi-1 {
+    border-radius: 6px;
+    background-color: rgb(255, 255, 255);
+    opacity: 0.502;
+    position: absolute;
+    margin: 140px 30px; 
+    min-width: 1080px;
+    height: 135px;
+    z-index: 0;
+} 
+
+.bgi-2 {
+    border-radius: 6px;
+    background-color: rgb(255, 255, 255);
+    opacity: 0.502;
+    position: absolute;
+    margin: 155px 15px;
+    min-width: 1110px;
+    height: 135px;
+    z-index: 1;
+}
+
+.bgi-main {
+    border-radius: 6px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.08);
+    position: absolute;
+    margin-top: 170px;
+    width: 1140px;
+    height: 135px;
+    z-index: 2;
+    &__content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 135px;
+    }
+    &__box {
+        min-width: 810px;
+        margin-left: 40px;
+        position: relative;
+        input {
+            display: block;
+            width: 100%;
+            border: 1px solid #dcdcdc;
+            border-radius: 4px;
+            padding: 20px 400px 20px 28px;
+            font-size: 16px;
+        }
+        .bgi-category {
+            position: absolute;
+            right: 0;
+            top: 0;
+            height: 60px;
+            border: 1px solid #dcdcdc;
+        }
+    }
+}
+
+
+// end search
+
+
+
