--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -191,6 +191,16 @@
         justify-content: space-between;
         align-items: center;
         height: 135px;
+        .search__btn {
+            border: none;
+            background-color: $blue;
+            padding: 22px 67px;
+            margin-right: 40px;
+            border-radius: 4px;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer;
+        }
     }
     &__box {
         min-width: 810px;
@@ -203,6 +213,9 @@
             border-radius: 4px;
             padding: 20px 400px 20px 28px;
             font-size: 16px;
+            &:focus-visible {
+                outline: none;
+            }
         }
         .bgi-category {
             position: absolute;
@@ -210,10 +223,29 @@
             top: 0;
             height: 60px;
             border: 1px solid #dcdcdc;
+            border-radius: 4px;
+            min-width: 195px;
+            color: #555555;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-left: 22px;
+            button {
+                cursor: pointer;
+                height: 55px;
+                width: 50px;
+                background-color: #fff;
+                border: none;
+                &::before {
+                    content: '\f107';
+                    font-family: 'icomoon';
+                    color: #676767;
+                    font-size: 20px;
+                }
+            }
         }
     }
 }
-
 
 // end search
 
