--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?40122f');
-  src:  url('../fonts/icomoon.eot?40122f#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?40122f') format('truetype'),
-    url('../fonts/icomoon.woff?40122f') format('woff'),
-    url('../fonts/icomoon.svg?40122f#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?4wo5jx');
+  src:  url('../fonts/icomoon.eot?4wo5jx#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?4wo5jx') format('truetype'),
+    url('../fonts/icomoon.woff?4wo5jx') format('woff'),
+    url('../fonts/icomoon.svg?4wo5jx#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,8 +25,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cart:before {
+  content: "\e900";
+}
 .icon-search:before {
   content: "\f002";
+}
+.icon-heart-o:before {
+  content: "\f08a";
 }
 .icon-angle-down:before {
   content: "\f107";
