--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -469,5 +469,214 @@
 
 // end slider
 
+// start products
+
+.products {
+    background-color: #f6f7fb;
+    &__inner {
+        padding: 120px 0;
+        &-title {
+            font-size: 30px;
+            color: #000;
+            background-color: #fff;
+            padding: 45px 30px;
+            border-radius: 4px;
+            box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+            margin-bottom: 28px;
+        }
+        &-btn {
+            padding: 30px;
+            background-color: #fff;
+            border-radius: 4px;
+            box-shadow: 0px 1px 2px 0px rgba(90, 93, 100, 0.1);
+            margin-bottom: 50px;
+            button {
+                background-color: #f1f3f6;
+                border: none;
+                padding: 7px 16px;
+                border-radius: 32px;
+                color: #747b86;
+                font-size: 15px;
+                cursor: pointer;
+                & + button {
+                    margin-left: 8px;
+                }
+                &.mixitup-control-active {
+                    background-color: $blue;
+                    color: #fff;
+                }
+            }
+        }
+        &-items {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            margin-bottom: 30px;
+        }
+        &-show {
+            text-align: center;
+            a {
+                padding: 21px 33px;
+                background-color: $blue;
+                border-radius: 55px;
+                color: #fff;
+            }
+        }
+    }
+}
+
+.products__item {
+    max-width: 361px;
+    width: 100%;
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+    margin-bottom: 30px;
+    &-img {
+        display: block;
+        background-image: url(../images/products/item-img.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-height: 230px;
+        position: relative;
+        transition: all .3s;
+        &:hover {
+            background-image: url(../images/products/item-bg.jpg);
+            .img-hover {
+                display: block;
+            }
+        }
+        .img-hover {
+            margin-top: 93px;
+            margin-left: 45px;
+            position: absolute;
+            display: none;
+        }
+        a {
+            background-color: transparent;
+            border: 1px solid #fff;
+            padding: 16px 27.5px;
+            font-size: 15px;
+            font-weight: 500;
+            border-radius: 45px;
+            transition: all .3s;
+            & + a {
+                margin-left: 11px;
+            }
+            &:hover {
+                background-color: #fff;
+                border: 1px solid transparent;
+                color: $blue
+            }
+        }
+    }
+    &-box {
+        padding: 30px 30px 35px;
+        border-bottom: 1px solid #ececec;
+    }
+    &-title {
+        font-size: 20px;
+        font-weight: 500;
+        color: #000;
+        margin-bottom: 20px;
+    }
+    &-author {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        margin-bottom: 35px;
+        .avatar {
+            width: 30px;
+            height: 30px;
+            background-position: center;
+            display: inline-block;
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-right: 7px;
+        }
+        a {
+            font-size: 15px;
+            color: #000;
+            margin-right: 20px;
+        }
+        span {
+            position: relative;
+            padding-left: 25px;
+            a{
+              font-size: 15px;
+            color: $pink;  
+            }
+            &::before {
+                content: '';
+                background-image: url(../images/slider/icon-1.png);
+                position: absolute;
+                width: 16px;
+                height: 16px;
+                left: 0;
+                top: 2px;
+            }
+        }
+    }
+    &-text {
+        line-height: 30px;
+        color: #555555;
+    }
+    &-bottom {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        padding: 15px 30px;
+    }
+}
+
+.item {
+    &__price {
+        padding: 8px 18px;
+        background-color: #e6f1fd;
+        border-radius: 30px;
+        margin-right: 14px;
+        a {
+            font-size: 15px;
+            font-weight: 500;
+            color: $blue;
+        }
+    }
+    &__heart {
+        padding-left: 22px;
+        font-size: 15px;
+        color: #6f7d8d;
+        position: relative;
+        margin-right: 16px;
+        &::before {
+            position: absolute;
+            content: '\f08a';
+            font-family: 'icomoon';
+            font-size: 15px;
+            color: $pink;
+            left: 0;
+            top: 0;
+        }
+    }
+    &__cart {
+        margin-left: auto;
+        padding-left: 23px;
+        position: relative;
+        &::before {
+            position: absolute;
+            content: '\e900';
+            font-family: 'icomoon';
+            font-size: 15px;
+            color: $blue;
+            left: 0;
+            top: 1px;
+        }
+        a {
+            color: $blue;
+            font-size: 15px;
+        }
+    }
+}
+
+// end products
 
 
