--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -679,4 +679,35 @@
 
 // end products
 
+// start feed
 
+.feed {
+    background-color: $gray;
+    &__inner {
+        padding: 120px 0;
+        &-title {
+            font-size: 30px;
+            color: #000;
+            background-color: #fff;
+            padding: 45px 30px;
+            border-radius: 4px;
+            box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+            margin-bottom: 50px;
+        }
+        &-items {
+            .slick-arrow {
+                background-color: $blue;
+            }
+            .slick-slide {
+                width: 390px;
+            }
+        }
+    }
+}
+
+.feed__slider-item {
+    background-color: #fff;
+}
+
+
+// end feed 
