--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?4wo5jx');
-  src:  url('../fonts/icomoon.eot?4wo5jx#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?4wo5jx') format('truetype'),
-    url('../fonts/icomoon.woff?4wo5jx') format('woff'),
-    url('../fonts/icomoon.svg?4wo5jx#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?4nkzcv');
+  src:  url('../fonts/icomoon.eot?4nkzcv#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?4nkzcv') format('truetype'),
+    url('../fonts/icomoon.woff?4nkzcv') format('woff'),
+    url('../fonts/icomoon.svg?4nkzcv#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -28,12 +28,87 @@
 .icon-cart:before {
   content: "\e900";
 }
+.icon-lock:before {
+  content: "\e901";
+}
+.icon-location:before {
+  content: "\e902";
+}
+.icon-eye:before {
+  content: "\e903";
+}
+.icon-mail:before {
+  content: "\e904";
+}
 .icon-search:before {
   content: "\f002";
+}
+.icon-bar-chart:before {
+  content: "\f080";
+}
+.icon-bar-chart-o:before {
+  content: "\f080";
 }
 .icon-heart-o:before {
   content: "\f08a";
 }
+.icon-twitter:before {
+  content: "\f099";
+}
+.icon-facebook:before {
+  content: "\f09a";
+}
+.icon-facebook-f:before {
+  content: "\f09a";
+}
+.icon-briefcase:before {
+  content: "\f0b1";
+}
+.icon-group:before {
+  content: "\f0c0";
+}
+.icon-users:before {
+  content: "\f0c0";
+}
+.icon-pinterest:before {
+  content: "\f0d2";
+}
+.icon-linkedin:before {
+  content: "\f0e1";
+}
+.icon-comment-o:before {
+  content: "\f0e5";
+}
+.icon-cloud-download:before {
+  content: "\f0ed";
+}
 .icon-angle-down:before {
   content: "\f107";
+}
+.icon-smile-o:before {
+  content: "\f118";
+}
+.icon-dribbble:before {
+  content: "\f17d";
+}
+.icon-google:before {
+  content: "\f1a0";
+}
+.icon-drivers-license-o:before {
+  content: "\f2c3";
+}
+.icon-id-card-o:before {
+  content: "\f2c3";
+}
+.icon-phone:before {
+  content: "\e942";
+}
+.icon-alarm:before {
+  content: "\e950";
+}
+.icon-magic-wand:before {
+  content: "\e997";
+}
+.icon-leaf:before {
+  content: "\e9a4";
 }
