--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -531,6 +531,7 @@
     border-radius: 4px;
     box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
     margin-bottom: 30px;
+    background-color: #fff;
     &-img {
         display: block;
         background-image: url(../images/products/item-img.jpg);
@@ -1078,6 +1079,7 @@
             margin-bottom: 60px;
             .feedback__content-box {
                 max-width: 555px;
+                min-height: 310px;
                 width: 100%;
                 padding: 50px 40px 35px;
                 box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
@@ -1136,3 +1138,95 @@
 
 // end feedback
 
+// start news
+
+.news {
+    background-color: #eceef2;
+    &__inner {
+        padding: 120px 0;
+        &-title {
+            text-align: center;
+            color: #000;
+            font-size: 36px;
+            width: 680px;
+            margin: 0 auto;
+            margin-bottom: 60px;
+            span {
+                color: $blue;
+            }
+            .news__title-text {
+                font-size: 16px;
+                color: #555555;
+                line-height: 30px;
+                margin-top: 30px;
+            }
+        }
+        &-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .products__item-img {
+                pointer-events:none;
+            }
+            .news__item-bottom {
+                display: flex;
+                justify-content: left;
+                align-items: center;
+                padding: 21px 30px;
+                .item {
+                    &__time {
+                        font-size: 15px;
+                        color: #999999;
+                        padding-left: 23px;
+                        position: relative;
+                        &::before {
+                            content: '\e950';
+                            font-family: 'icomoon';
+                            color: $blue;
+                            font-size: 15px;
+                            top: 0;
+                            left: 0;
+                            position: absolute;
+                        }
+                    }
+                    &__comments {
+                        margin-left: auto;
+                        padding-left: 23px;
+                        margin-right: 32px;
+                        position: relative;
+                        &::before {
+                            position: absolute;
+                            content: '\f0e5';
+                            font-family: 'icomoon';
+                            color: #999999;
+                            font-size: 15px;
+                            top: 0;
+                            left: 0;
+                        }
+                        a {
+                            font-size: 15px;
+                            color: #999999;
+                        }
+                    }
+                    &__views {
+                        font-size: 15px;
+                        color: #999999;
+                        padding-left: 22px;
+                        position: relative;
+                        &::before {
+                            position: absolute;
+                            content: '\e903';
+                            font-family: 'icomoon';
+                            color: #999999;
+                            font-size: 15px;
+                            top: 0;
+                            left: 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+// end news
